# pipeline

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pipeline.h
tests/: CMakeLists.txt  test_pipeline.cpp
